Some logo.jpg -> .png, updates to JS page, fixing overlapping image in featured researchers.

--- a/src/sass/component/_hcard.scss
+++ b/src/sass/component/_hcard.scss
@@ -2,8 +2,10 @@
 // HCARD
 //
 $img_size:140px;
+
 .h-card {
   @include component;
+  overflow:hidden;
 }
 .h-card__title {
 
